# Topiary-TrimBot

./: LICENSE  README.md
art/: New Boot Screen.psd  TopiaryTrimbot.psd  TopiaryTrimbotMask.psd
docs/team_administration/: TeamContract.docx
experimental/cpp/plant_detect/: .clang-format  .gitignore  CMakeLists.txt
experimental/cpp/plant_detect/include/: application.h  block.h  calibrate_block.h  camera_block.h  camera_layer.h  debug_layer.h  depth_block.h  display_block.h  int_input_block.h  layer.h  mean_shift_detect_block.h  options.h  options_layer.h  rectify_block.h  rescale_block.h  still_frame_block.h
experimental/cpp/plant_detect/lib/imgui/: imconfig.h
experimental/cpp/plant_detect/lib/imgui/backends/: imgui_impl_opengl3.cpp
experimental/cpp/plant_detect/src/: CMakeLists.txt  application.cpp  block.cpp  calibrate.cpp  calibrate_block.cpp  camera_block.cpp  camera_layer.cpp  debug_layer.cpp  depth_block.cpp  display_block.cpp  grayscale_block.cpp  int_input_block.cpp  main.cpp  mean_shift_detect_block.cpp  options.cpp  options_layer.cpp  rectify_block.cpp  rescale_block.cpp  still_frame_block.cpp
experimental/cpp/usb_packet_testing/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
experimental/cpp/usb_packet_testing/inc/: common.h  crc16.h  fifo.h  file_receiver.h  packet.h  usb.h
experimental/cpp/usb_packet_testing/lib/cobs-c/: CMakeLists.txt  cobs.c
experimental/cpp/usb_packet_testing/src/: CMakeLists.txt  crc16.c  file_receiver.cpp  main.cpp  packet.cpp  packet_engine.cpp  usb.cpp
experimental/lcd_prototyping/: .cproject  .mxproject  .project  lcd_prototyping Debug.launch  lcd_prototyping.ioc
experimental/lcd_prototyping_platformio/: .clang-format  .gitignore  README.md  linkerscript.ld  platformio.ini
experimental/lcd_prototyping_platformio/include/: clocks.h  flash.h  ft6336g.h  gui_app.h  lcd.h  ltdc_dsi.h  main.h  nt35510.h  ram.h  stm32f4xx_hal_conf.h  terminal.h  usb.h
experimental/lcd_prototyping_platformio/scripts/: convert_bmp_to_header.py  convert_ttf_to_header.py  dependencies.py
experimental/lcd_prototyping_platformio/src/: board.h  clocks.c  clocks.cpp  flash.c  flash.cpp  ft6336g.c  ft6336g.cpp  gui_app.cpp  lcd.c  lcd.cpp  ltdc_dsi.c  ltdc_dsi.cpp  main.c  main.cpp  nt35510.c  nt35510.cpp  ram.cpp  terminal.cpp  timing.cpp  usb.cpp
experimental/python-notebooks/plant_detect/: TPS92365x.ipynb  outline_mapping.py  plant_detect.ipynb  plant_detect_color.ipynb  plant_detect_edges.ipynb  plant_detect_excess_green.ipynb  point_cloud.vtk
experimental/python-notebooks/toolpathing/: toolpathing.ipynb
experimental/ra8875_test_platformio/: .clang-format  .gitignore  platformio.ini
experimental/stepper_protoyping/: stepper_prototyping.ioc
experimental/stm32f469prototyping/: .cproject  .mxproject  .project  README.md  stm32f469prototyping Debug.launch
experimental/stm32f746prototyping/: .cproject  .mxproject  .project  STM32F746ZGTX_FLASH.ld  STM32F746ZGTX_RAM.ld  stm32f746prototyping Debug.launch
experimental/stm32prototyping/: platformio.ini
hardware/PCB/: .gitignore  TopiaryTrimbot.kicad_pcb  TopiaryTrimbot.kicad_pro  TopiaryTrimbot.kicad_sch  fp-lib-table  lcd.kicad_sch  mcu.kicad_sch  motor.kicad_sch  power.kicad_sch  rpi.kicad_sch  storage.kicad_sch  sym-lib-table
stepper_protoyping/: .cproject  .project  stepper_prototyping Debug.launch
stepper_protoyping/Debug/: makefile  stepper_prototyping.elf  stepper_prototyping.list  stepper_prototyping.map
(+84 files in other folders)
